fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -689,7 +689,7 @@ nav {
 
   .sponsors {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    grid-template-columns: repeat(1, 1fr); /* 2 columns */
     gap: 0px;
     justify-items: center;
     width: 100%;
@@ -729,6 +729,7 @@ nav {
 
 .hero-top {
   /* margin-bottom:100%; */
+  padding-top: 50px;
   overflow: hidden;
 }
 
